# hayaemon_windows

./: .gitattributes  .gitignore  App.cpp  App.h  Hayaemon.rc  Hayaemon.sln  Hayaemon.vcxproj  Hayaemon.vcxproj.filters  README.md  ReleaseZIP.bat  clean.bat  copylibs.ps1  downloadlibs.ps1  getlibs.bat  libjpeg.lib  makelibs.ps1  npnez.lib  profilestart.bat  readme.txt  readme_en.txt  resource.h  xVideo.lib
Common/: AcceleratorTable.cpp  AcceleratorTable.h  BASS_DSHOW.h  BASS_DSHOW_ExportFunc.h  Bass.h  BassFx.h  ButtonExt.h  ComboBox.cpp  CommandList.cpp  CommandList.h  DC.h  Define.h  Edit.h  EditExt.h  Font.h  FrameWnd.h  HotKeyCtrl.h  ListView.h  Menu.cpp  ProgressCtrl.h  RadioButton.h  SliderCtrl.h  Static.h  Tab.h  ToolBar.cpp  ToolBar.h  UpDownCtrl.h  Utils.cpp  Utils.h  Wnd.cpp  Wnd.h  bass_aac.h  bassasio.h  basscd.h  bassenc.h  bassenc_mp3.h  basswasapi.h  hash.cpp  nsfsdk.h  sha1.c  (+3 more)
CountLoopWnd/: CountLoopWnd_MainWnd.cpp  CountLoopWnd_MainWnd.h
DecFreqWnd/: DecFreqWnd_MainWnd.h
DecSpeedWnd/: DecSpeedWnd_MainWnd.cpp
IncSpeedWnd/: IncSpeedWnd_MainWnd.h
KeySettingWnd/: KeyInputWnd.cpp  KeySettingWnd_MainWnd.h  List_KeySettingWnd.h
LimitSettingWnd/: LimitSettingWnd_MainWnd.cpp
MainWnd/: 3DReverbCustomizeWnd.cpp  ABLoopPosWnd.cpp  ABLoopPosWnd.h  ChorusCustomizeWnd.cpp  ChorusCustomizeWnd.h  CompressorCustomizeWnd.cpp  DelayCustomizeWnd.cpp  DistortionCustomizeWnd.cpp  DistortionCustomizeWnd.h  Divider2_MainWnd.cpp  Divider3_MainWnd.cpp  Divider3_MainWnd.h  Divider4_MainWnd.cpp  Divider4_MainWnd.h  Divider5_MainWnd.cpp  Divider5_MainWnd.h  Divider_MainWnd.h  EQ100Label_MainWnd.cpp  EQ100Label_MainWnd.h  EQ100Slider_MainWnd.cpp  EQ10KLabel_MainWnd.cpp  EQ10KSlider_MainWnd.cpp  EQ125Label_MainWnd.cpp  EQ125Label_MainWnd.h  EQ125Slider_MainWnd.cpp  EQ125Slider_MainWnd.h  EQ12_5KLabel_MainWnd.cpp  EQ12_5KSlider_MainWnd.cpp  EQ12_5KSlider_MainWnd.h  EQ160Label_MainWnd.cpp  EQ160Slider_MainWnd.cpp  EQ16KLabel_MainWnd.cpp  EQ16KLabel_MainWnd.h  EQ16KSlider_MainWnd.cpp  EQ16KSlider_MainWnd.h  EQ1KLabel_MainWnd.cpp  EQ1KSlider_MainWnd.cpp  EQ1KSlider_MainWnd.h  EQ1_25KLabel_MainWnd.cpp  EQ1_25KSlider_MainWnd.cpp  (+147 more)
OutKeySettingWnd/: OutKeyInputWnd.cpp  OutKeyInputWnd.h  OutKeySettingWnd_MainWnd.h
Release/manual_en/: index.html
Setup_en/: Setup_en.vdproj
Setup_jp/: Setup_jp.vdproj
VideoScreenWnd/: RMenu_VideoScreenWnd.cpp  VideoScreenWnd_MainWnd.h
Windows/: .gitignore  App.cpp  App.h  BASS_DSHOW.lib  Hayaemon.sln  Hayaemon.vcproj  Hayaemon.vcxproj.filters  bass_alac.lib  bass_ape.lib  bassasio.lib  bassenc.lib  bassflac.lib  basswasapi.lib  drag_copy.cur  libjpeg.lib  npnez.lib  profileexit.bat  readme.txt  readme_en.txt  readme_ja.txt
Windows/Common/: Bitmap.h  Button.cpp  Button.h  ButtonExt.cpp  ClientDC.h  ComboBox.cpp  ComboBox.h  CommandList.h  EditExt.cpp  HotKeyCtrl.h  Menu.h  RadioButton.cpp  SnapWnd.h  Tab.h  Wnd.cpp  Wnd.h  bass_aac.h  bass_alac.h  bass_ape.h  jerror.h  oauth.cpp  oauth.h  oauth_http.cpp  socket.h
Windows/DecFreqWnd/: DecFreqWnd_MainWnd.cpp
Windows/DecSpeedWnd/: DecSpeedWnd_MainWnd.h
Windows/IncFreqWnd/: IncFreqWnd_MainWnd.cpp  IncFreqWnd_MainWnd.h
Windows/IncSpeedWnd/: IncSpeedWnd_MainWnd.cpp
Windows/KeySettingWnd/: KeyInputWnd.h  KeySettingWnd_MainWnd.cpp  List_KeySettingWnd.cpp
Windows/LimitSettingWnd/: LimitSettingWnd_MainWnd.h
Windows/MainWnd/: 3DReverbCustomizeWnd.h  AllSaveWnd_MainWnd.cpp  AllSaveWnd_MainWnd.h  ChorusCustomizeWnd.cpp  CompressorCustomizeWnd.h  DelayCustomizeWnd.cpp  DelayCustomizeWnd.h  Divider2_MainWnd.h  Divider4_MainWnd.cpp  Divider_MainWnd.cpp  EQ100Label_MainWnd.cpp  EQ100Slider_MainWnd.h  EQ10KLabel_MainWnd.cpp  EQ10KLabel_MainWnd.h  EQ10KSlider_MainWnd.h  EQ125Label_MainWnd.cpp  EQ125Slider_MainWnd.cpp  EQ12_5KLabel_MainWnd.h  EQ12_5KSlider_MainWnd.cpp  EQ160Label_MainWnd.h  EQ160Slider_MainWnd.h  EQ16KLabel_MainWnd.cpp  EQ16KSlider_MainWnd.cpp  EQ1KLabel_MainWnd.h  EQ1KSlider_MainWnd.cpp  EQ1_25KLabel_MainWnd.cpp  EQ1_25KLabel_MainWnd.h  EQ1_6KLabel_MainWnd.cpp  EQ1_6KLabel_MainWnd.h  EQ200Label_MainWnd.cpp  EQ200Label_MainWnd.h  EQ200Slider_MainWnd.cpp  (+83 more)
img/: drag_move.cur
qt_gui/: CMakeLists.txt  README.ja.md
qt_gui/resource/: icon1.icns  windows.rc
qt_gui/src/: App.cpp  App.h  Hayaemon.qrc  Hayaemon_ja.qm  Hayaemon_ja.ts  Info.plist.in
qt_gui/src/Common/: Bass.h  BassFx.h  CommandList.h  Define.h  DoubleSpinBox.h  ListView.cpp  ListView.h  SliderCtrl.h  SliderCtrlCore.h  SpinBox.h  StaticCore.h  Tab.h  Utils.cpp  Utils.h
qt_gui/src/CountLoopWnd/: CountLoopWnd.ui  CountLoopWnd_MainWnd.cpp  CountLoopWnd_MainWnd.h
qt_gui/src/DecFreqWnd/: DecFreqWnd_MainWnd.cpp  DecFreqWnd_MainWnd.h
qt_gui/src/DecSpeedWnd/: DecSpeedWnd_MainWnd.cpp  DecSpeedWnd_MainWnd.h
qt_gui/src/IncFreqWnd/: IncFreqWnd_MainWnd.cpp  IncFreqWnd_MainWnd.h
qt_gui/src/IncSpeedWnd/: IncSpeedWnd.ui  IncSpeedWnd_MainWnd.cpp  IncSpeedWnd_MainWnd.h
qt_gui/src/LimitSettingWnd/: LimitSettingWnd.ui  LimitSettingWnd_MainWnd.cpp  LimitSettingWnd_MainWnd.h
qt_gui/src/MainWnd/: 3DReverbCustomizeWnd.cpp  3DReverbCustomizeWnd.h  ABLoopPosWnd.cpp  ABLoopPosWnd.h  ABLoopPosWnd.ui  AllSaveWnd.ui  AllSaveWnd_MainWnd.cpp  AllSaveWnd_MainWnd.h  ChorusCustomizeWnd.cpp  ChorusCustomizeWnd.h  ChorusCustomizeWnd.ui  CompressorCustomizeWnd.cpp  CompressorCustomizeWnd.h  CompressorCustomizeWnd.ui  DelayCustomizeWnd.cpp  DelayCustomizeWnd.h  DelayCustomizeWnd.ui  DistortionCustomizeWnd.cpp  DistortionCustomizeWnd.h  DistortionCustomizeWnd.ui  EQLabel_MainWnd.cpp  EQLabel_MainWnd.h  EQSlider_MainWnd.cpp  EQSlider_MainWnd.h  Explorer.cpp  Explorer.h  ExplorerBar.cpp  ExplorerBar.h  FlangerCustomizeWnd.cpp  FlangerCustomizeWnd.h  FlangerCustomizeWnd.ui  FreqLabel_MainWnd.cpp  FreqLabel_MainWnd.h  FreqSlider_MainWnd.cpp  FreqSlider_MainWnd.h  GargleCustomizeWnd.cpp  GargleCustomizeWnd.h  GargleCustomizeWnd.ui  M3UFile.cpp  M3UFile.h  (+62 more)
qt_gui/src/MetronomeWnd/: MetronomeWnd.ui  MetronomeWnd_MainWnd.cpp  MetronomeWnd_MainWnd.h
qt_gui/src/TimerPlayWnd/: TimerPlayWnd.ui  TimerPlayWnd_MainWnd.cpp  TimerPlayWnd_MainWnd.h
(+29 files in other folders)
